--- a/src/main/resources/static/chat.html
+++ b/src/main/resources/static/chat.html
@@ -24,12 +24,10 @@
 </head>
 
 <body onload="connect();getTxt();">
-<div><textarea id="java-code" onload="getTxt();" onshow="loadTxt();">
+<div><textarea id="java-code" >
 
 </textarea></div>
 	<div>
-
-
 		<div>
 			<input type="text" id="from" placeholder="Choose a nickname" />
 		</div>
@@ -37,11 +35,12 @@
 		<div>
 			<button id="connect" onclick="connect();">Connect</button>
 			<button id="disconnect" disabled="disabled" onclick="disconnect();">Disconnect</button>
-			<button id="getTxt" onclick="getTxt();">getTxt</button>
+			<button id="reset" onclick="getTxt();">getTxt</button>
 		</div>
 		<br />
 		<div id="conversationDiv">
-			<input type="text" id="text" placeholder="Write a message..." />
+			<button id="compile" onclick="compile();">compile</button>
+			<button id="test" onclick="test();">test</button>
 			<button id="sendMessage" onclick="sendMessage();">Send</button>
 			<p id="response"></p>
 		</div>
